fix brutal image having the gap at thebottom

--- a/src/components/brutal-image/_brutal-image.scss
+++ b/src/components/brutal-image/_brutal-image.scss
@@ -9,12 +9,12 @@
         background-position: top center;
         position: relative;
         overflow: hidden;
-        background-size: auto 90vh;
+        background-size: auto 100vh;
     }
     & .image {
         visibility:hidden;
         width:auto;
-        height:90vh;
+        height:100vh;
         margin:0;
     }
 }
